last night kevin job

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-ui": "^1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.36",
     "mobx": "^3.3.3",
+    "mobx-logger": "https://github.com/iamdanthedev/mobx-undo-redo",
     "mobx-react": "^4.3.5",
     "moment": "^2.21.0",
     "node-uuid": "^1.4.8",
